TEST_PROGRAMS/VALID/09/return_in_while.go
package return_while

func main() {
    plus(1,2)
}

func plus(a, b int) int {
    for {
        return 1
    }
    ;;;;;
}
