TEST_PROGRAMS/INVALID/08/twoReturns.go
package main;
func f(a,b int) {
    return a,b;
}
